--- a/pureGraph/index.css
+++ b/pureGraph/index.css
@@ -1,3 +1,8 @@
+body{
+  padding: 0;
+  margin: 10px;
+}
+
 .square {
     width: 200px;
     height: 200px;
@@ -408,4 +413,67 @@
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
     margin: 50px 0;
+}
+
+.check{
+  position: relative;
+  display: inline-block;
+}
+
+.check:after{
+  display: inline-block;
+  content: '\20';
+  width: 6px;
+  height: 12px;
+  border: 2px solid #ffcf22;
+  border-top: 0;
+  border-left: 0;
+  transform: rotate(45deg) scale(1);
+}
+
+.big-check{
+  position: relative;
+  left: 50px;
+  display: inline-block;
+}
+
+.big-check:after{
+  display: inline-block;
+  content: '\20';
+  width: 30px;
+  height: 60px;
+  border: 3px solid #22c9ff;
+  border-top: 0;
+  border-left: 0;
+  transform: rotate(45deg) scale(1);
+}
+
+.hero-rectangle {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+}
+
+.hero-triangle {
+  height: 0;
+  border-left: 100vw solid #107be7;
+  border-bottom: 50px solid transparent;
+}
+
+.hero-rectangle-ad {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+}
+
+.hero-triangle-ad {
+  background-color: #107be7;
+  position: relative;
+  height: 99px;
+  bottom: 50px;
+  width: 100%;
+  z-index: -1;
+  -webkit-transform: skewY(-6deg);
+  -ms-transform: skewY(-6deg);
+  transform: skewY(-6deg);
 }
