--- a/modal/index.css
+++ b/modal/index.css
@@ -1,36 +1,173 @@
+body {
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+}
+
 .container {
     line-height: 50px;
 }
 
-#modal {
+#modal-V1-shadow {
     /*set default modal status is hide*/
     display: none;
+
     /*实现一层蒙版的效果 加上浅灰的背景色*/
-    z-index: 3;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.4);
     position: fixed; /*此处使用fixed 而不是absolute 是因为fixed是相对于视口viewpoint定位的*/
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    overflow: auto;
-}
-
-.modal-content {
-    width: 60%;
-    max-height: 50vh;
-
-    overflow: scroll; /*文字超出后设置为滑动*/
-
-    text-align: center; /*文字居中*/
-
-    position: fixed; /*此处使用fixed 而不是absolute 是因为fixed是相对于视口viewpoint定位的*/
-    margin: auto; /*此处必须使用margin auto设置上下左右居中*/
-    top: 0; /*定位设置 上下居中  左右居中*/
     right: 0;
     bottom: 0;
-    left: 0;
+}
 
+.modal-V1-wrapper {
+    /*高度固定，宽度固定*/
+    width: 320px;
+    height: 400px;
+
+    margin: 20px auto 20px;
+
+    text-align: center; /*文字居中*/
+    overflow: auto; /*文字超出modal高度后设置为滑动状态*/
     background-color: darkorange;
-    z-index: 999;
+
+    border-radius: 6px;
+}
+
+.modal-V1-content {
+    padding: 10px;
+}
+
+#modal-V2-shadow {
+    /*set default modal status is hide*/
+    display: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    z-index: 10;
+
+    height: 100%;
+    width: 100%;
+
+    /*实现一层蒙版的效果 加上浅灰的背景色*/
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+    left: 0;
+    top: 0;
+
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.modal-V2-wrapper {
+    width: auto;
+    background-color: darkorange;
+    margin: 36px 8px;
+    border-radius: 6px;
+}
+
+.modal-V2-content {
+    padding: 10px;
+}
+
+#modal-V3-shadow {
+    /*set default modal status is hide*/
+    display: none;
+    overflow-x: hidden;
+    overflow-y: auto;
+    z-index: 10;
+
+    /*实现一层蒙版的效果 加上浅灰的背景色*/
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.modal-V3-wrapper {
+    max-width: 500px;
+    background-color: darkorange;
+    margin: 1.75rem auto;
+    border-radius: 6px;
+    transform: translate(0, 0);
+}
+
+.modal-V3-content {
+    padding: 10px;
+}
+
+#modal-V4-shadow {
+    /*set default modal status is hide*/
+    display: none;
+    z-index: 10;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    /*实现一层蒙版的效果 加上浅灰的背景色*/
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.modal-V4-wrapper {
+    display: flex;
+    align-items: center;
+
+    margin: 1.75rem auto;
+    max-width: 500px;
+    min-height: calc(100% - (1.75rem * 2));
+
+    transform: translate(0, 0);
+    transition: transform .3s ease-out;
+}
+
+.modal-V4-content {
+    background-color: darkorange;
+    width: 100%;
+
+    border-radius: 6px;
+}
+
+#modal-V5-shadow {
+    /*set default modal status is hide*/
+    display: none;
+    z-index: 10;
+    overflow-x: hidden;
+    overflow-y: auto;
+
+    /*实现一层蒙版的效果 加上浅灰的背景色*/
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.4);
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+
+    /*设置modal位置居中*/
+    align-items: center;
+    justify-content: center;
+
+    padding: 15px;
+}
+
+.modal-V5-wrapper {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .modal-V5-wrapper {
+       width: 450px;
+    }
+}
+
+.modal-V5-content {
+    padding: 10px;
+    background-color: darkorange;
+    border-radius: 6px;
 }
