--- a/transform/index.css
+++ b/transform/index.css
@@ -1,12 +1,18 @@
 body {
     background-color: #F4F7F6;
+    margin: 0;
 }
 
 .container {
+
+}
+
+.wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 500px;
+    background-color: #ffcf22;
 }
 
 .picwall {
@@ -40,3 +46,17 @@ h3 {
     transform: rotate(720deg) scale(1.5, 1.5) translate3d(0, 0, 0);
 }
 
+.background-wrapper {
+    position: relative;
+    height: 400px;
+}
+
+/*倾斜的背景*/
+.lean-background {
+    background-color: #22c9ff;
+    width: 100%;
+    height: 320px;
+    position: absolute;
+    bottom: 40px;
+    transform: skewY(-6deg);
+}
