--- a/pureGraph/index.css
+++ b/pureGraph/index.css
@@ -1,426 +1,445 @@
-body{
+body {
   padding: 0;
   margin: 10px;
 }
 
+.break-line {
+  height: 10px;
+  padding: 10px;
+}
+
 .square {
-    width: 200px;
-    height: 200px;
-    background-color: orangered;
+  width: 200px;
+  height: 200px;
+  background-color: orangered;
 }
 
 .rectangle {
-    width: 400px;
-    height: 200px;
-    background-color: orange;
+  width: 400px;
+  height: 200px;
+  background-color: orange;
 }
 
 .rectangle-with-half-color {
-    border: 5px solid #a00fc7;
-    border-bottom-width: 50px;
-    width: 100px;
-    height: 50px;
+  border: 5px solid #a00fc7;
+  border-bottom-width: 50px;
+  width: 100px;
+  height: 50px;
 }
 
 .gradient-rectangle {
-    width: 100px;
-    height: 100px;
-    background: linear-gradient(20deg, red, yellow);
+  width: 100px;
+  height: 100px;
+  background: linear-gradient(20deg, red, yellow);
 }
 
 .circle {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    background-color: cornflowerblue;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background-color: cornflowerblue;
 }
 
 .circle-beauty-1 {
-    width: 100px;
-    height: 100px;
-    border: 10px solid red;
-    border-radius: 30px;
+  width: 100px;
+  height: 100px;
+  border: 10px solid red;
+  border-radius: 30px;
 }
 
 .circle-beauty-2 {
-    width: 50px;
-    height: 50px;
-    border: 10px solid red;
-    border-radius: 50px 40px 0 40px;
+  width: 50px;
+  height: 50px;
+  border: 10px solid red;
+  border-radius: 50px 40px 0 40px;
 }
 
 .oval {
-    width: 200px;
-    height: 100px;
-    background-color: aquamarine;
-    border-radius: 100px  / 50px;
+  width: 200px;
+  height: 100px;
+  background-color: aquamarine;
+  border-radius: 100px  / 50px;
+}
+
+.half-oval {
+  width: 200px;
+  height: 100px;
+  background-color: aquamarine;
+  border-radius: 50%  / 100% 100% 0 0;
+}
+
+.quarter-oval {
+  width: 200px;
+  height: 100px;
+  background-color: aquamarine;
+  border-radius: 100% 0 0 0;
 }
 
 .topTriangle {
-    width: 0;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 100px solid #a00fc7;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid #a00fc7;
 }
 
 .rightTriangle {
-    width: 0;
-    height: 0;
-    border-left: 100px solid #a00fc7;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
+  width: 0;
+  height: 0;
+  border-left: 100px solid #a00fc7;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
 }
 
 .bottomTriangle {
-    /*First way*/
-    width: 0;
-    height: 0;
-    border-top: 100px solid #a00fc7;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
+  /*First way*/
+  width: 0;
+  height: 0;
+  border-top: 100px solid #a00fc7;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
 
-    /*Second way*/
-    /*
-    此方法的局限性是不可以调整三角形的高度
-    width: 0;
-    height: 0;
-    border: 100px solid transparent;
-    border-top-color: #a00fc7;
-    */
+  /*Second way*/
+  /*
+  此方法的局限性是不可以调整三角形的高度
+  width: 0;
+  height: 0;
+  border: 100px solid transparent;
+  border-top-color: #a00fc7;
+  */
 }
 
 .leftTriangle {
-    width: 0;
-    height: 0;
-    border-right: 100px solid #a00fc7;
-    border-top: 50px solid transparent;
-    border-bottom: 50px solid transparent;
+  width: 0;
+  height: 0;
+  border-right: 100px solid #a00fc7;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
 }
 
 /*-------------------------------------------------*/
 
 .leftTopTriangle {
-    width: 0;
-    height: 0;
-    border: 50px solid #a00fc7;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
+  width: 0;
+  height: 0;
+  border: 50px solid #a00fc7;
+  border-right-color: transparent;
+  border-bottom-color: transparent;
 
 }
 
 .rightTopTriangle {
-    width: 0;
-    height: 0;
-    border: 50px solid transparent;
-    border-top-color: #a00fc7;
-    border-right-color: #a00fc7;
+  width: 0;
+  height: 0;
+  border: 50px solid transparent;
+  border-top-color: #a00fc7;
+  border-right-color: #a00fc7;
 }
 
 .rightBottomTriangle {
-    width: 0;
-    height: 0;
-    border: 50px solid transparent;
-    border-right-color: #a00fc7;
-    border-bottom-color: #a00fc7;
+  width: 0;
+  height: 0;
+  border: 50px solid transparent;
+  border-right-color: #a00fc7;
+  border-bottom-color: #a00fc7;
 }
 
 .leftBottomTriangle {
-    width: 0;
-    height: 0;
-    border: 50px solid transparent;
-    border-left-color: #a00fc7;
-    border-bottom-color: #a00fc7;
+  width: 0;
+  height: 0;
+  border: 50px solid transparent;
+  border-left-color: #a00fc7;
+  border-bottom-color: #a00fc7;
 }
 
 .parallelogram {
-    width: 100px;
-    height: 100px;
-    margin-left: 20px;
-    background-color: #ffcf22;
-    transform: skew(30deg);
+  width: 100px;
+  height: 100px;
+  margin-left: 20px;
+  background-color: #ffcf22;
+  transform: skew(30deg);
 }
 
 .trapezoid {
-    width: 30px;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 100px solid #a00fc7;
+  width: 30px;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid #a00fc7;
 }
 
 .star-six {
-    width: 0;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 100px solid #98bf21;
-    position: relative;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid #98bf21;
+  position: relative;
 }
 
 .star-six:after {
-    width: 0;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-top: 100px solid #98bf21;
-    content: "";
-    position: absolute;
-    left: -50px;
-    top: 40px;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-top: 100px solid #98bf21;
+  content: "";
+  position: absolute;
+  left: -50px;
+  top: 40px;
 }
 
 .star-five-step-1 {
-    width: 0;
-    height: 0;
-    position: relative;
-    display: block;
-    color: red;
-    border-right: 100px solid transparent;
-    border-bottom: 60px solid red;
-    border-left: 100px solid transparent;
+  width: 0;
+  height: 0;
+  position: relative;
+  display: block;
+  color: red;
+  border-right: 100px solid transparent;
+  border-bottom: 60px solid red;
+  border-left: 100px solid transparent;
 }
 
 .star-five-step-2 {
-    width: 0;
-    height: 0;
-    position: relative;
-    display: block;
-    color: red;
-    border-right: 100px solid transparent;
-    border-bottom: 60px solid red;
-    border-left: 100px solid transparent;
-    -moz-transform: rotate(35deg);
-    -webkit-transform: rotate(35deg);
-    -ms-transform: rotate(35deg);
-    -o-transform: rotate(35deg);
+  width: 0;
+  height: 0;
+  position: relative;
+  display: block;
+  color: red;
+  border-right: 100px solid transparent;
+  border-bottom: 60px solid red;
+  border-left: 100px solid transparent;
+  -moz-transform: rotate(35deg);
+  -webkit-transform: rotate(35deg);
+  -ms-transform: rotate(35deg);
+  -o-transform: rotate(35deg);
 }
 
 .star-five {
-    margin: 50px 0;
-    position: relative;
-    display: block;
-    color: red;
-    width: 0;
-    height: 0;
-    border-right: 100px solid transparent;
-    border-bottom: 70px solid red;
-    border-left: 100px solid transparent;
-    -moz-transform: rotate(35deg);
-    -webkit-transform: rotate(35deg);
-    -ms-transform: rotate(35deg);
-    -o-transform: rotate(35deg);
+  margin: 50px 0;
+  position: relative;
+  display: block;
+  color: red;
+  width: 0;
+  height: 0;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid red;
+  border-left: 100px solid transparent;
+  -moz-transform: rotate(35deg);
+  -webkit-transform: rotate(35deg);
+  -ms-transform: rotate(35deg);
+  -o-transform: rotate(35deg);
 }
 
 .star-five:before {
-    border-bottom: 80px solid red;
-    border-left: 30px solid transparent;
-    border-right: 30px solid transparent;
-    position: absolute;
-    height: 0;
-    width: 0;
-    top: -45px;
-    left: -65px;
-    display: block;
-    content: '';
-    -webkit-transform: rotate(-35deg);
-    -moz-transform: rotate(-35deg);
-    -ms-transform: rotate(-35deg);
-    -o-transform: rotate(-35deg);
+  border-bottom: 80px solid red;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -45px;
+  left: -65px;
+  display: block;
+  content: '';
+  -webkit-transform: rotate(-35deg);
+  -moz-transform: rotate(-35deg);
+  -ms-transform: rotate(-35deg);
+  -o-transform: rotate(-35deg);
 
 }
 
 .star-five:after {
-    position: absolute;
-    display: block;
-    color: red;
-    top: 3px;
-    left: -105px;
-    width: 0;
-    height: 0;
-    border-right: 100px solid transparent;
-    border-bottom: 70px solid red;
-    border-left: 100px solid transparent;
-    -webkit-transform: rotate(-70deg);
-    -moz-transform: rotate(-70deg);
-    -ms-transform: rotate(-70deg);
-    -o-transform: rotate(-70deg);
-    content: '';
+  position: absolute;
+  display: block;
+  color: red;
+  top: 3px;
+  left: -105px;
+  width: 0;
+  height: 0;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid red;
+  border-left: 100px solid transparent;
+  -webkit-transform: rotate(-70deg);
+  -moz-transform: rotate(-70deg);
+  -ms-transform: rotate(-70deg);
+  -o-transform: rotate(-70deg);
+  content: '';
 }
 
 .pentagon {
-    width: 0;
-    height: 0;
-    border-left: 68.5px solid transparent;
-    border-right: 68.5px solid transparent;
-    border-bottom: 50px solid red;
-    position: relative;
-    margin: 50px 0;
+  width: 0;
+  height: 0;
+  border-left: 68.5px solid transparent;
+  border-right: 68.5px solid transparent;
+  border-bottom: 50px solid red;
+  position: relative;
+  margin: 50px 0;
 
 }
 
 .pentagon:after {
-    content: "";
-    width: 84px;
-    height: 0;
-    border-top: 80.36px solid red;
-    border-left: 26px solid transparent;
-    border-right: 26px solid transparent;
-    position: absolute;
-    top: 50px;
-    left: -68px;
+  content: "";
+  width: 84px;
+  height: 0;
+  border-top: 80.36px solid red;
+  border-left: 26px solid transparent;
+  border-right: 26px solid transparent;
+  position: absolute;
+  top: 50px;
+  left: -68px;
 }
 
 .hexagon {
-    width: 100px;
-    height: 55px;
-    background: red;
-    position: relative;
-    margin: 50px 0;
+  width: 100px;
+  height: 55px;
+  background: red;
+  position: relative;
+  margin: 50px 0;
 }
 
 .hexagon:before {
-    content: "";
-    position: absolute;
-    top: -25px;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 25px solid red;
+  content: "";
+  position: absolute;
+  top: -25px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 25px solid red;
 }
 
 .hexagon:after {
-    content: "";
-    position: absolute;
-    bottom: -25px;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-top: 25px solid red;
+  content: "";
+  position: absolute;
+  bottom: -25px;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-top: 25px solid red;
 }
 
 .octagon {
-    width: 100px;
-    height: 50px;
-    background: red;
-    position: relative;
-    margin: 50px 0;
+  width: 100px;
+  height: 50px;
+  background: red;
+  position: relative;
+  margin: 50px 0;
 }
 
 .octagon:before {
-    content: "";
-    position: absolute;
-    top: -29px;
-    left: 0;
-    border-bottom: 29px solid red;
-    border-left: 29px solid transparent;
-    border-right: 29px solid transparent;
-    width: 42px;
-    height: 0;
+  content: "";
+  position: absolute;
+  top: -29px;
+  left: 0;
+  border-bottom: 29px solid red;
+  border-left: 29px solid transparent;
+  border-right: 29px solid transparent;
+  width: 42px;
+  height: 0;
 }
 
 .octagon:after {
-    content: "";
-    position: absolute;
-    top: 50px;
-    left: 0;
-    border-top: 29px solid red;
-    border-left: 29px solid transparent;
-    border-right: 29px solid transparent;
-    width: 42px;
-    height: 0;
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 0;
+  border-top: 29px solid red;
+  border-left: 29px solid transparent;
+  border-right: 29px solid transparent;
+  width: 42px;
+  height: 0;
 }
 
 .heart {
-    position: relative;
-    width: 100px;
-    height: 90px;
-    margin: 50px 0;
+  position: relative;
+  width: 100px;
+  height: 90px;
+  margin: 50px 0;
 }
 
 .heart:before,
 .heart:after {
-    position: absolute;
-    content: "";
-    left: 50px;
-    top: 0;
-    width: 50px;
-    height: 80px;
-    background: red;
-    -moz-border-radius: 50px 50px 0 0;
-    border-radius: 50px 50px 0 0;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    -webkit-transform-origin: 0 100%;
-    -moz-transform-origin: 0 100%;
-    -ms-transform-origin: 0 100%;
-    -o-transform-origin: 0 100%;
-    transform-origin: 0 100%;
+  position: absolute;
+  content: "";
+  left: 50px;
+  top: 0;
+  width: 50px;
+  height: 80px;
+  background: red;
+  -moz-border-radius: 50px 50px 0 0;
+  border-radius: 50px 50px 0 0;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0 100%;
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  -o-transform-origin: 0 100%;
+  transform-origin: 0 100%;
 }
 
 .heart:after {
-    left: 0;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    -webkit-transform-origin: 100% 100%;
-    -moz-transform-origin: 100% 100%;
-    -ms-transform-origin: 100% 100%;
-    -o-transform-origin: 100% 100%;
-    transform-origin: 100% 100%;
+  left: 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  -o-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
 }
 
 .infinity {
-    width: 50px;
-    height: 50px;
-    border: 10px solid red;
-    border-radius: 50px 50px 0 50px;
-    transform: rotate(-45deg);
-    position: relative;
-    margin: 50px 0;
+  width: 50px;
+  height: 50px;
+  border: 10px solid red;
+  border-radius: 50px 50px 0 50px;
+  transform: rotate(-45deg);
+  position: relative;
+  margin: 50px 0;
 }
 
 .infinity:after {
-    position: absolute;
-    left: 50px;
-    top: 50px;
-    content: "";
-    width: 50px;
-    height: 50px;
-    border: 10px solid red;
-    border-radius: 50px 50px 0 50px;
-    transform: rotate(180deg);
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  content: "";
+  width: 50px;
+  height: 50px;
+  border: 10px solid red;
+  border-radius: 50px 50px 0 50px;
+  transform: rotate(180deg);
 }
 
 .pacman {
-    width: 0;
-    height: 0;
-    border-right: 60px solid transparent;
-    border-top: 60px solid red;
-    border-left: 60px solid red;
-    border-bottom: 60px solid red;
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-    margin: 50px 0;
+  width: 0;
+  height: 0;
+  border-right: 60px solid transparent;
+  border-top: 60px solid red;
+  border-left: 60px solid red;
+  border-bottom: 60px solid red;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+  border-bottom-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  margin: 50px 0;
 }
 
-.check{
+.check {
   position: relative;
   display: inline-block;
 }
 
-.check:after{
+.check:after {
   display: inline-block;
   content: '\20';
   width: 6px;
@@ -431,13 +450,13 @@ body{
   transform: rotate(45deg) scale(1);
 }
 
-.big-check{
+.big-check {
   position: relative;
   left: 50px;
   display: inline-block;
 }
 
-.big-check:after{
+.big-check:after {
   display: inline-block;
   content: '\20';
   width: 30px;
@@ -477,4 +496,25 @@ body{
   -webkit-transform: skewY(-6deg);
   -ms-transform: skewY(-6deg);
   transform: skewY(-6deg);
+}
+
+.parallelogram-word {
+  margin-top: 50px;
+  margin-left: 50px;
+  color: white;
+  display: inline-block;
+  padding: 10px;
+  position: relative;
+}
+
+.parallelogram-word:after {
+  background: #22c9ff;
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: skew(-45deg);
 }
