--- a/layout/overflow/index.html
+++ b/layout/overflow/index.html
@@ -10,23 +10,23 @@
 <div class="container">
     <div class="without-overflow-clear border-color-orange">
 
-        <img src="./linyuner.jpg" alt="yoon">
+        <img src="linyuner.jpg" alt="yoon">
         <p>未设置clear的情形 + 未设置overflow: auto的情形</p>
     </div>
 
     <div class="overflow border-color-green">
-        <img src="./linyuner.jpg" alt="yoon">
+        <img src="linyuner.jpg" alt="yoon">
     </div>
 
     <hr>
 
     <div class="overflow-clear border-color-orange">
-        <img src="./linyuner.jpg" alt="yoon">
+        <img src="linyuner.jpg" alt="yoon">
         <p>设置clear的情形 + 设置overflow: auto的情形</p>
     </div>
 
     <div class="overflow-clear border-color-green">
-        <img src="./linyuner.jpg" alt="yoon">
+        <img src="linyuner.jpg" alt="yoon">
     </div>
 
 
