--- a/animation/index.css
+++ b/animation/index.css
@@ -1,67 +1,68 @@
 body {
-    background-color: #F4F7F6;
+  background-color: #F4F7F6;
 }
 
 .container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
-    width: 300px;
-    height: 500px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  width: 300px;
+  height: 500px;
 }
 
 .picwall {
-    position: absolute;
-    display: inline-block;
-    background-color: #fcfcfc;
-    box-shadow: 5px 5px 10px rgba(135, 139, 144, 0.4);
-    transition: transform 2s ease-in-out;
+  position: absolute;
+  display: inline-block;
+  background-color: #fcfcfc;
+  box-shadow: 5px 5px 10px rgba(135, 139, 144, 0.4);
+  transition: transform 2s ease-in-out;
 }
 
 .picwall a {
-    display: inline-block;
-    height: 300px;
-    text-decoration: none;
-    text-align: center;
-}
-
-.pic-img {
-    width: 400px;
-    display: block;
-}
-
-.content {
-    padding: 20px;
-}
-
-h3 {
-    margin: 0;
+  display: inline-block;
+  height: 300px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .picwall:hover {
-    box-shadow: 10px 10px 20px rgba(50, 50, 50, 0.4);
-    transform: scale(1.5, 1.5) translate3d(0, 0, 0);
+  box-shadow: 10px 10px 20px rgba(50, 50, 50, 0.4);
+  transform: scale(1.5, 1.5);
 }
 
 .pic-1-img:hover {
-    opacity: 0;
-    transition: opacity 1.5s;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
 }
 
 .pic-1-img:not(focus) {
-    opacity: 1;
-    transition: opacity 1.5s;
+  opacity: 1;
+  transition: opacity 1.5s ease-in-out;
 }
 
+.pic-img {
+  width: 400px;
+  display: block;
+}
+
+.content {
+  padding: 20px;
+}
+
+h3 {
+  margin: 0;
+}
+
+
 .pic-1-img {
-    position: relative;
-    z-index: 5;
+  position: relative;
+  z-index: 5;
 }
 
 .pic-2-img {
-    position: absolute;
-    top: 0;
+  position: absolute;
+  top: 0;
 }
