--- a/animation/ball/index.css
+++ b/animation/ball/index.css
@@ -12,6 +12,23 @@ body {
   }
 }
 
+@keyframes runWithColor {
+  0% {
+    left: 0;
+    background-color: #ff2215;
+  }
+
+  50% {
+    left: 50vw;
+    background-color: #ffcf22;
+  }
+
+  100% {
+    left: 100vw;
+    background-color: #7cff2c;
+  }
+}
+
 #root {
   width: 100vw;
   height: 100vh;
@@ -48,20 +65,19 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 100px;
-  background-color: #7cff2c;
+  background-color: #ff2215;
   position: absolute;
   cursor: pointer;
 }
 
 .animation {
-  animation: 2s run 0s ease infinite alternate both running;
+  animation: 2s runWithColor 0s linear infinite alternate both running;
 }
-
 
 /*animation-duration: 2s;*/
 /*animation-name: run;*/
 /*animation-delay: 0s;*/
-/*animation-timing-function: ease;*/
+/*animation-timing-function: ease/linear;*/
 /*animation-iteration-count: infinite;*/
 /*animation-direction: reverse/alternate;*/
 /*animation-fill-mode: both;*/
